2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-containers-tables.adb:
	Minor reformatting.

	* aws-status.adb:
	Minor reformatting.

	* aws-smtp-client.adb:
	(Open): Call Shutdown to close the socket and release memory
	 associated to the connection.
	(Shutdown): New procedure.
	(Send): Properly call Shutdown to safely close the socket.

2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-translator.adb:
	(Compress_Decompress): Do not use an access parameter. This is
	 just not needed.
	(Compress): Idem.
	(Decompress): Idem.

	* aws-translator.ads:
	(Compress): Do not use an access parameter. This is just not needed.
	(Decompress): Idem.

2003-10-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-resources-streams-memory.ads,
	  aws-resources-streams-memory.adb,
	  aws-resources-streams-memory-zlib.ads,
	  aws-resources-streams-memory-zlib.adb:
	(Append): With access buffer parameter removed.

	* aws-response-set.ads, aws-response-set.adb:
	(Append_Body): With access buffer parameter removed.
	(Message_Body): With access buffer parameter removed.

2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-mime.ads:
	(Content_Type): Move to the right section.

2003-10-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-client.adb:
	Change references to Content_Encoding type now in AWS.Messages.

	* aws-containers-tables.ads:
	Minor reformatting.

	* aws-headers-set.ads:
	Minor reformatting.

	* aws-messages.ads:
	(Content_Encoding): Moved here from AWS.Response.
	Minor reformatting.

	* aws-response-set.ads, aws-response-set.adb:
	Change references to Content_Encoding type now in AWS.Messages.

	* aws-response.adb:
	(Authentication): Set variable as constant.
	(Authentication_State): Idem.
	(File): Add encoding parameter. Properly set the encoding header
	 in the response object.

	* aws-response.ads:
	(Content_Encoding): Type moved to AWS.Messages.
	(File): Add encoding parameter.

	* aws-status.adb:
	(Accept_Encoding): New routine.
	(Is_Supported): New routine.
